--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.0",
+    "clsx": "^1.2.1",
     "eslint": "^8.28.0",
     "eslint-config-next": "13.0.5",
+    "imagekit": "^4.1.2",
     "next": "13.0.5",
     "next-auth": "^4.17.0",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.5",
+    "react-icons": "^4.6.0",
+    "react-image-crop": "^10.0.8",
+    "react-tooltip": "^4.5.1",
     "sass": "^1.56.1",
     "superjson": "^1.11.0",
     "typescript": "^4.9.3",
