--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^1.2.1",
     "eslint": "^8.28.0",
     "eslint-config-next": "13.0.5",
+    "formidable": "^2.0.1",
     "imagekit": "^4.1.2",
     "next": "13.0.5",
     "next-auth": "^4.17.0",
@@ -32,9 +33,12 @@
     "sass": "^1.56.1",
     "superjson": "^1.11.0",
     "typescript": "^4.9.3",
+    "uuid": "^9.0.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint-config-prettier": "^8.5.0",
