--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
     "react-image-crop": "^10.0.8",
+    "react-infinite-scroll-hook": "^4.0.4",
     "react-tooltip": "^4.5.1",
     "sass": "^1.56.1",
     "superjson": "^1.11.0",
