--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^1.2.1",
     "eslint": "^8.28.0",
     "eslint-config-next": "13.0.5",
+    "formidable": "^2.0.1",
     "imagekit": "^4.1.2",
     "next": "13.0.5",
     "next-auth": "^4.17.0",
@@ -28,22 +29,34 @@
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
     "react-image-crop": "^10.0.8",
+    "react-infinite-scroll-hook": "^4.0.4",
     "react-tooltip": "^4.5.1",
     "sass": "^1.56.1",
     "superjson": "^1.11.0",
     "typescript": "^4.9.3",
+    "uuid": "^9.0.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/formidable": "^2.0.5",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-testing-library": "^5.9.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "next-router-mock": "^0.8.0",
     "prettier": "^2.8.0",
     "prisma": "^4.6.1"
   }
