--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "react-tooltip": "^4.5.1",
     "sass": "^1.56.1",
     "superjson": "^1.11.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
-    "zod": "^3.19.1"
+    "zod": "^3.19.1",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
