--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
+    "lint-strict-fix": "eslint --fix components pages && pnpm format"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
