--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint-strict-fix": "eslint --fix components pages && pnpm format"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.6.1",
     "@tanstack/react-query": "^4.16.1",
