--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
-    "lint-strict-fix": "eslint --fix components pages && pnpm format"
+    "lint-strict-fix": "eslint --fix components pages && pnpm format",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.6.1",
     "@tanstack/react-query": "^4.16.1",
+    "@tanstack/react-query-devtools": "^4.19.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -24,6 +26,7 @@
     "eslint": "^8.28.0",
     "eslint-config-next": "13.0.5",
     "formidable": "^2.0.1",
+    "framer-motion": "^7.6.18",
     "imagekit": "^4.1.2",
     "next": "13.0.5",
     "next-auth": "^4.17.0",
