--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
+    "lint-strict-fix": "eslint --fix components pages && yarn format",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.6.1",
     "@tanstack/react-query": "^4.16.1",
+    "@tanstack/react-query-devtools": "^4.19.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -20,6 +26,7 @@
     "eslint": "^8.28.0",
     "eslint-config-next": "13.0.5",
     "formidable": "^2.0.1",
+    "framer-motion": "^7.6.18",
     "imagekit": "^4.1.2",
     "next": "13.0.5",
     "next-auth": "^4.17.0",
@@ -33,9 +40,11 @@
     "react-tooltip": "^4.5.1",
     "sass": "^1.56.1",
     "superjson": "^1.11.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
-    "zod": "^3.19.1"
+    "zod": "^3.19.1",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
