feat: add post description

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "13.0.5",
     "formidable": "^2.0.1",
     "framer-motion": "^7.6.18",
+    "html-react-parser": "^3.0.4",
     "imagekit": "^4.1.2",
     "next": "13.0.5",
     "next-auth": "^4.17.0",
