--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "add": "^2.0.6",
     "axios": "^1.2.0",
     "clsx": "^1.2.1",
     "eslint": "^8.28.0",
@@ -29,6 +30,7 @@
     "framer-motion": "^7.6.18",
     "html-react-parser": "^3.0.4",
     "imagekit": "^4.1.2",
+    "moment": "^2.29.4",
     "next": "13.0.5",
     "next-auth": "^4.17.0",
     "nodemailer": "^6.8.0",
@@ -44,6 +46,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
+    "yarn": "^1.22.19",
     "zod": "^3.19.1",
     "zustand": "^4.1.4"
   },
