--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socia",
+  "name": "photo-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,10 +18,6 @@
     "@prisma/client": "^4.6.1",
     "@tanstack/react-query": "^4.16.1",
     "@tanstack/react-query-devtools": "^4.19.1",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "add": "^2.0.6",
     "axios": "^1.2.0",
     "clsx": "^1.2.1",
     "eslint": "^8.28.0",
@@ -31,7 +27,7 @@
     "html-react-parser": "^3.0.4",
     "imagekit": "^4.1.2",
     "moment": "^2.29.4",
-    "next": "13.0.5",
+    "next": "13.0.6",
     "next-auth": "^4.17.0",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
@@ -43,18 +39,22 @@
     "react-tooltip": "^4.5.1",
     "sass": "^1.56.1",
     "superjson": "^1.11.0",
+    "throttle-debounce": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
     "yarn": "^1.22.19",
-    "zod": "^3.19.1",
-    "zustand": "^4.1.4"
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/formidable": "^2.0.5",
+    "@types/node": "^18.11.13",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/throttle-debounce": "^5.0.0",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
