--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
     "yarn": "^1.22.19",
-    "zod": "^3.19.1"
+    "zod": "^3.19.1",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
