--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^7.6.18",
     "html-react-parser": "^3.0.4",
     "imagekit": "^4.1.2",
+    "jotai": "^1.12.0",
     "moment": "^2.29.4",
     "next": "13.0.6",
     "next-auth": "^4.17.0",
@@ -44,8 +45,7 @@
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
     "yarn": "^1.22.19",
-    "zod": "^3.19.1",
-    "zustand": "^4.1.5"
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
