chore: fix ci config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: Check PR
-
-on: [pull_request]
+on:
+  push:
+    branches: ['main']
+  pull_request:
+    branches: ['main']
 
 jobs:
   run-ci:
@@ -30,6 +33,9 @@ jobs:
 
       - name: Check linting
         run: yarn lint
+
+      - name: Run tests
+        run: yarn jest
 
       - name: Check commits messages
         uses: wagoid/commitlint-github-action@v5
