--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,102 @@
-name: Check PR
-
-on: [pull_request]
+name: Code Check
+on:
+  push:
+    branches:
+      - main
+      - develop
+  pull_request: {
+    
+  }
 
 jobs:
-  run-ci:
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    name: Run Type Check & Linters
+  lint:
+    name: ⬣ ESLint
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
+      - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
         with:
-          persist-credentials: false
-          fetch-depth: 0
+          persist-credentials: false      
 
-      - name: Set up Node
+      - name: ⎔ Set up node
         uses: actions/setup-node@v3
         with:
           node-version: lts/*
 
-      - name: Download deps
+      - name: 📥 Download deps
         run: yarn install
 
-      - name: Check types
+      - name: 🔬 Lint
+        run: yarn lint-strict-fix
+
+  typecheck:
+    name: ʦ TypeScript
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false      
+
+      - name: ⎔ Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+
+      - name: 📥 Download deps
+        run: yarn install
+
+      - name: 🔎 Type check
         run: yarn tsc
 
-      - name: Check linting
-        run: yarn lint
+  prettier:
+    name: 💅 Prettier
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
 
-      - name: Check commits messages
-        uses: wagoid/commitlint-github-action@v5
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false      
+
+      - name: ⎔ Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+
+      - name: 📥 Download deps
+        run: yarn install
+          
+      - name: 🔎 Type check
+        run: yarn format:check
+
+  test:
+    name: 🃏 Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false      
+
+      - name: ⎔ Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+
+      - name: 📥 Download deps
+        run: yarn install
+
+      - name: 🔬🥼 Run tests
+        run: yarn jest
