Revert "Chore/add tests (#11)"
This reverts commit 2c0f8d39cbd076a66abe7b1d2149204655cc8aab.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       "~/*": ["./public/*"]
     },
   },
-  "include": ["types.d.ts", "next-env.d.ts", "tests/jest.setup.ts", "jest.config.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["types.d.ts", "next-env.d.ts", "jest.setup.js", "jest.config.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
 }
