--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,102 +1,35 @@
-name: Code Check
-on:
-  push:
-    branches:
-      - main
-      - develop
-  pull_request: {
-    
-  }
+name: Check PR
+
+on: [pull_request]
 
 jobs:
-  lint:
-    name: ⬣ ESLint
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🛑 Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
+  run-ci:
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: ⬇️ Checkout repo
+    name: Run Type Check & Linters
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          persist-credentials: false      
+          persist-credentials: false
+          fetch-depth: 0
 
-      - name: ⎔ Set up node
+      - name: Set up Node
         uses: actions/setup-node@v3
         with:
           node-version: lts/*
 
-      - name: 📥 Download deps
+      - name: Download deps
         run: yarn install
 
-      - name: 🔬 Lint
-        run: yarn lint-strict-fix
-
-  typecheck:
-    name: ʦ TypeScript
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🛑 Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
-
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: false      
-
-      - name: ⎔ Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-
-      - name: 📥 Download deps
-        run: yarn install
-
-      - name: 🔎 Type check
+      - name: Check types
         run: yarn tsc
 
-  prettier:
-    name: 💅 Prettier
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🛑 Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
+      - name: Check linting
+        run: yarn lint
 
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: false      
-
-      - name: ⎔ Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-
-      - name: 📥 Download deps
-        run: yarn install
-          
-      - name: 🔎 Type check
-        run: yarn format:check
-
-  test:
-    name: 🃏 Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🛑 Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
-
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: false      
-
-      - name: ⎔ Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-
-      - name: 📥 Download deps
-        run: yarn install
-
-      - name: 🔬🥼 Run tests
-        run: yarn jest
+      - name: Check commits messages
+        uses: wagoid/commitlint-github-action@v5
