--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@tanstack/react-query-devtools": "^4.19.1",
     "axios": "^1.2.0",
     "clsx": "^1.2.1",
-    "dayjs": "^1.11.7",
     "eslint": "^8.28.0",
     "eslint-config-next": "13.0.5",
     "formidable": "^2.0.1",
@@ -28,6 +27,7 @@
     "html-react-parser": "^3.0.4",
     "imagekit": "^4.1.2",
     "jotai": "^1.12.0",
+    "moment": "^2.29.4",
     "next": "13.0.6",
     "next-auth": "^4.17.0",
     "nodemailer": "^6.8.0",
