--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jotai": "^1.12.0",
     "next": "13.0.6",
     "next-auth": "^4.17.0",
+    "next-seo": "^5.15.0",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
