--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,6 @@
 {
-    "arrowParens": "always",
-    "singleQuote": true,
-    "jsxSingleQuote": true,
-    "tabWidth": 2,
-    "semi": true,
-    "trailingComma": "es5",
-    "printWidth": 100
-  }
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 120
+}
