--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
     "react-image-crop": "^10.0.8",
