--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-image-crop": "^10.0.8",
     "react-infinite-scroll-hook": "^4.0.4",
     "react-tooltip": "^4.5.1",
+    "sanitize-filename": "^1.6.3",
     "sass": "^1.56.1",
     "superjson": "^1.11.0",
     "throttle-debounce": "^5.0.0",
