--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -34,24 +34,8 @@ jobs:
         with:
           node-version-file: ".nvmrc"
 
-      - uses: pnpm/action-setup@v2
-        with:
-          run_install: false
-
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: node-cache-${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            node-cache-${{ runner.os }}-pnpm-
       - name: Install dependencies
-        run: pnpm --version && pnpm install --frozen-lockfile
+        run: yarn install
 
       - name: Restore next build
         uses: actions/cache@v3
@@ -63,7 +47,7 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}
 
       - name: Build next.js app
-        run: pnpm build --filter=app
+        run: yarn build --filter=app
 
       - name: Analyze bundle
         run: cd apps/app && npx -p nextjs-bundle-analysis report
