--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -47,8 +47,8 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}
 
       - name: Build next.js app
-        run: yarn build --filter=app
-
+        run: yarn build
+        
       - name: Analyze bundle
         run: cd apps/app && npx -p nextjs-bundle-analysis report
 
