--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -43,20 +43,20 @@ jobs:
         env:
           cache-name: cache-next-build
         with:
-          path: apps/app/.next/cache
+          path: .next/cache
           key: ${{ runner.os }}-build-${{ env.cache-name }}
 
       - name: Build next.js app
         run: yarn build
-        
+
       - name: Analyze bundle
-        run: cd apps/app && npx -p nextjs-bundle-analysis report
+        run: npx -p nextjs-bundle-analysis report
 
       - name: Upload bundle
         uses: actions/upload-artifact@v3
         with:
           name: bundle
-          path: apps/app/.next/analyze/__bundle_analysis.json
+          path: .next/analyze/__bundle_analysis.json
 
       - name: Download base branch bundle stats
         uses: dawidd6/action-download-artifact@v2
@@ -65,7 +65,7 @@ jobs:
           workflow: nextjs_bundle_analysis.yml
           # branch: ${{ github.event.pull_request.base.ref }}
           commit: ${{ github.event.pull_request.base.sha }}
-          path: apps/app/.next/analyze/base
+          path: .next/analyze/base
 
       # And here's the second place - this runs after we have both the current and
       # base branch bundle stats, and will compare them to determine what changed.
@@ -82,7 +82,7 @@ jobs:
       # entry in your package.json file.
       - name: Compare with base branch bundle
         if: success() && github.event.number
-        run: ls -laR apps/app/.next/analyze/base && cd apps/app && npx -p nextjs-bundle-analysis compare
+        run: ls -laR .next/analyze/base && npx -p nextjs-bundle-analysis compare
 
       - name: Get comment body
         id: get-comment-body
@@ -92,7 +92,7 @@ jobs:
           result-encoding: string
           script: |
             const fs = require('fs')
-            const comment = fs.readFileSync('apps/app/.next/analyze/__bundle_analysis_comment.txt', 'utf8')
+            const comment = fs.readFileSync('/.next/analyze/__bundle_analysis_comment.txt', 'utf8')
             core.setOutput('body', comment)
       - name: Find Comment
         uses: peter-evans/find-comment@v2
