--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -1,32 +1,25 @@
-name: "Next.js Bundle Analysis"
-
-concurrency:
-  group: analyze-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+name: 'Next.js Bundle Analysis'
 
 on:
   pull_request:
   push:
     branches:
-      - develop
+      - develop # change this if your default branch is named differently
   workflow_dispatch:
 
 defaults:
   run:
+    # change this if your nextjs app does not live at the root of the repo
     working-directory: ./
 
 jobs:
   analyze:
     runs-on: ubuntu-latest
-    env:
-      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-      NEXT_PUBLIC_API_URL: https://staging-api.devfaq.pl
-
     steps:
       - uses: actions/checkout@v2
-      
-      - uses: actions/setup-node@v3
+
+      - name: Set up node
+ -      uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
 
@@ -39,17 +32,23 @@ jobs:
         env:
           cache-name: cache-next-build
         with:
+          # if you use a custom build directory, replace all instances of `.next` in this file with your build directory
+          # ex: if your app builds to `dist`, replace `.next` with `dist`
           path: .next/cache
+          # change this if you prefer a more strict cache
           key: ${{ runner.os }}-build-${{ env.cache-name }}
 
       - name: Build next.js app
-        run: yarn build
+        # change this if your site requires a custom build command
+        run: ./node_modules/.bin/next build
 
+      # Here's the first place where next-bundle-analysis' own script is used
+      # This step pulls the raw bundle stats for the current bundle
       - name: Analyze bundle
         run: npx -p nextjs-bundle-analysis report
 
       - name: Upload bundle
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: bundle
           path: .next/analyze/__bundle_analysis.json
@@ -59,8 +58,7 @@ jobs:
         if: success() && github.event.number
         with:
           workflow: nextjs_bundle_analysis.yml
-          # branch: ${{ github.event.pull_request.base.ref }}
-          commit: ${{ github.event.pull_request.base.sha }}
+          branch: ${{ github.event.pull_request.base.ref }}
           path: .next/analyze/base
 
       # And here's the second place - this runs after we have both the current and
@@ -83,30 +81,30 @@ jobs:
       - name: Get comment body
         id: get-comment-body
         if: success() && github.event.number
-        uses: actions/github-script@v6
-        with:
-          result-encoding: string
-          script: |
-            const fs = require('fs')
-            const comment = fs.readFileSync('/.next/analyze/__bundle_analysis_comment.txt', 'utf8')
-            core.setOutput('body', comment)
+        run: |
+          body=$(cat .next/analyze/__bundle_analysis_comment.txt)
+          body="${body//'%'/'%25'}"
+          body="${body//$'\n'/'%0A'}"
+          body="${body//$'\r'/'%0D'}"
+          echo ::set-output name=body::$body
+
       - name: Find Comment
-        uses: peter-evans/find-comment@v2
+        uses: peter-evans/find-comment@v1
         if: success() && github.event.number
         id: fc
         with:
           issue-number: ${{ github.event.number }}
-          body-includes: "<!-- __NEXTJS_BUNDLE -->"
+          body-includes: '<!-- __NEXTJS_BUNDLE -->'
 
       - name: Create Comment
-        uses: peter-evans/create-or-update-comment@v2
+        uses: peter-evans/create-or-update-comment@v1.4.4
         if: success() && github.event.number && steps.fc.outputs.comment-id == 0
         with:
           issue-number: ${{ github.event.number }}
           body: ${{ steps.get-comment-body.outputs.body }}
 
       - name: Update Comment
-        uses: peter-evans/create-or-update-comment@v2
+        uses: peter-evans/create-or-update-comment@v1.4.4
         if: success() && github.event.number && steps.fc.outputs.comment-id != 0
         with:
           issue-number: ${{ github.event.number }}
