--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "photo-app",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prepare": "yarn husky install",
     "lint": "next lint",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
-    "lint-strict-fix": "eslint --fix components pages && yarn format",
+    "lint-strict-fix": "eslint --fix && yarn format",
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
@@ -39,6 +40,7 @@
     "react-image-crop": "^10.0.8",
     "react-infinite-scroll-hook": "^4.0.4",
     "react-tooltip": "^4.5.1",
+    "sanitize-filename": "^1.6.3",
     "sass": "^1.56.1",
     "superjson": "^1.11.0",
     "throttle-debounce": "^5.0.0",
@@ -49,6 +51,8 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.0",
+    "@commitlint/config-conventional": "^17.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -68,11 +72,19 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-testing-library": "^5.9.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "lint-staged": "^13.1.0",
     "next-router-mock": "^0.8.0",
+    "nextjs-bundle-analysis": "^0.4.0",
     "prettier": "^2.8.0",
     "prisma": "^4.6.1"
+  },
+  "nextBundleAnalysis": {
+    "budget": null,
+    "budgetPercentIncreaseRed": 20,
+    "showDetails": true
   }
 }
