docs: remove about word from readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "photo-app",
+  "description": "Fullstack Next,js social app. In photo-app you can sign up via google and upload your favourite photos.",
   "version": "0.2.0",
   "private": true,
   "scripts": {
