--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "^13.1.2",
+    "@next/font": "^13.1.2",
     "@prisma/client": "^4.6.1",
+    "@tabler/icons": "^1.119.0",
     "@tanstack/react-query": "^4.16.1",
     "@tanstack/react-query-devtools": "^4.19.1",
     "axios": "^1.2.0",
@@ -39,7 +41,6 @@
     "react-dom": "18.2.0",
     "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.39.5",
-    "react-icons": "^4.6.0",
     "react-image-crop": "^10.0.8",
     "react-infinite-scroll-hook": "^4.0.4",
     "react-tooltip": "^4.5.1",
