--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "~/*": ["./public/*"]
     },
   },
-  "include": ["types.d.ts", "next-env.d.ts", "jest.setup.js", "jest.config.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["types.d.ts", "next-env.d.ts", "jest.setup.js", "jest.config.ts", "**/*.ts", "**/*.tsx", "utils/env.mjs"],
   "exclude": ["node_modules"],
 }
