--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next/bundle-analyzer": "^13.1.2",
     "@next/font": "^13.1.2",
     "@prisma/client": "^4.6.1",
+    "@react-hook/resize-observer": "^1.2.6",
     "@tabler/icons": "^1.119.0",
     "@tanstack/react-query": "^4.16.1",
     "@tanstack/react-query-devtools": "^4.19.1",
