--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint",
     "tsc": "tsc --noEmit",
     "format": "prettier -w .",
+    "test": "jest",
     "format:check": "prettier -c .",
     "lint-strict-fix": "eslint --fix && yarn format",
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
@@ -79,8 +80,8 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.1.0",
     "next-router-mock": "^0.8.0",
     "nextjs-bundle-analysis": "^0.4.0",
