--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.1.0",
+    "msw": "^1.0.0",
     "next-router-mock": "^0.8.0",
     "nextjs-bundle-analysis": "^0.4.0",
     "prettier": "^2.8.0",
