fix: bugged post creation

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ EMAIL_SERVER_PASSWORD=
 EMAIL_SERVER_HOST=
 EMAIL_SERVER_PORT=
 EMAIL_FROM=
+IMG_KIT_PRIVATE=
 
 
 NEXTAUTH_SECRET=
@@ -14,5 +15,4 @@ NEXTAUTH_URL=
 
 NEXT_PUBLIC_API_ROOT=
 NEXT_PUBLIC_IMG_KIT_PUBLIC=
-NEXT_PUBLIC_IMG_KIT_PRIVATE=
 NEXT_PUBLIC_IMG_KIT_ENDPOINT=
