feat: improve code quality

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "dayjs": "^1.11.7",
     "eslint": "^8.28.0",
     "eslint-config-next": "13.0.5",
-    "formidable": "^2.0.1",
     "framer-motion": "^8.5.2",
     "hmacsha1": "^1.0.0",
     "html-react-parser": "^3.0.4",
+    "html-to-image": "^1.11.11",
     "imagekit": "^4.1.2",
     "next": "13.0.6",
     "next-auth": "^4.19.2",
