--- a/package.json
+++ b/package.json
@@ -28,18 +28,17 @@
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "eslint": "^8.28.0",
-    "eslint-config-next": "13.0.5",
+    "eslint-config-next": "^13.1.6",
     "framer-motion": "^8.5.2",
-    "hmacsha1": "^1.0.0",
     "html-react-parser": "^3.0.4",
     "html-to-image": "^1.11.11",
     "imagekit": "^4.1.2",
-    "next": "13.0.6",
+    "next": "^13.1.6",
     "next-auth": "^4.19.2",
     "next-seo": "^5.15.0",
     "nodemailer": "^6.8.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.39.5",
     "react-hot-toast": "^2.4.0",
@@ -59,7 +58,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/formidable": "^2.0.5",
     "@types/node": "^18.11.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
