--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "^13.1.2",
     "@next/font": "^13.1.2",
+    "@plaiceholder/next": "^2.5.0",
     "@prisma/client": "^4.6.1",
     "@tabler/icons": "^1.119.0",
     "@tanstack/react-query": "^4.16.1",
@@ -35,8 +36,10 @@
     "imagekit": "^4.1.2",
     "next": "^13.1.6",
     "next-auth": "^4.19.2",
+    "next-compose-plugins": "^2.2.1",
     "next-seo": "^5.15.0",
     "nodemailer": "^6.8.0",
+    "plaiceholder": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.2",
@@ -45,6 +48,7 @@
     "react-image-crop": "^10.0.8",
     "react-infinite-scroll-hook": "^4.0.4",
     "sass": "^1.58.0",
+    "sharp": "^0.31.3",
     "throttle-debounce": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
