--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "^13.1.2",
-    "@next/font": "^13.1.2",
     "@prisma/client": "^4.10.1",
+    "@react-hook/window-size": "^3.1.1",
     "@tabler/icons": "^1.119.0",
     "@tanstack/react-query": "^4.16.1",
     "axios": "^1.2.0",
@@ -48,6 +48,7 @@
     "react-infinite-scroll-hook": "^4.0.4",
     "react-use-websocket": "^4.3.1",
     "sass": "^1.58.0",
+    "socket.io-client": "^4.6.1",
     "throttle-debounce": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
