--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^4.7.3",
     "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.39.5",
     "react-hot-toast": "^2.4.0",
-    "react-image-crop": "^10.0.8",
     "react-infinite-scroll-hook": "^4.0.4",
     "react-use-websocket": "^4.3.1",
     "sass": "^1.58.0",
