--- a/package.json
+++ b/package.json
@@ -20,34 +20,35 @@
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "^13.1.2",
-    "@next/font": "^13.1.2",
     "@prisma/client": "^4.10.1",
+    "@react-hook/window-size": "^3.1.1",
     "@tabler/icons": "^1.119.0",
     "@tanstack/react-query": "^4.16.1",
     "axios": "^1.2.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "eslint": "^8.28.0",
-    "eslint-config-next": "^13.1.6",
+    "eslint-config-next": "^13.2.1",
     "framer-motion": "^8.5.2",
     "html-react-parser": "^3.0.4",
     "html-to-image": "^1.11.11",
     "imagekit": "^4.1.2",
     "jotai": "^2.0.2",
-    "next": "^13.1.6",
+    "next": "^13.2.1",
     "next-auth": "^4.19.2",
     "next-compose-plugins": "^2.2.1",
     "next-seo": "^5.15.0",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^4.7.3",
     "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.39.5",
     "react-hot-toast": "^2.4.0",
-    "react-image-crop": "^10.0.8",
     "react-infinite-scroll-hook": "^4.0.4",
     "react-use-websocket": "^4.3.1",
     "sass": "^1.58.0",
+    "socket.io-client": "^4.6.1",
     "throttle-debounce": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
