--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tabler/icons": "^1.119.0",
     "@tanstack/react-query": "^4.16.1",
     "axios": "^1.2.0",
+    "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "eslint": "^8.28.0",
@@ -63,6 +64,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.11.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
