--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@prisma/client": "^4.10.1",
     "@tabler/icons-react": "^2.10.0",
     "@tanstack/react-query": "^4.16.1",
+    "argon2": "^0.30.3",
     "axios": "^1.2.0",
-    "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "framer-motion": "^8.5.2",
@@ -56,7 +56,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.11.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
