feat: pwa support

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,92 +1,118 @@
 {
-    "env": {
-       "browser": true,
-       "es2021": true,
-       "node": true
-     },
-     "parser": "@typescript-eslint/parser",
-     "plugins": [
-      "jest-dom", 
-      "testing-library",
-       "@typescript-eslint",
-       "simple-import-sort",
-       "unused-imports",
-       "prettier",
-       "jsx-a11y",
-       "jest"
-     ],
-     "extends": [
-       "prettier",
-       "next",
-       "next/core-web-vitals",
-       "plugin:@typescript-eslint/recommended"
-     ],
-     "rules": {
-       "prettier/prettier": "error",
-       "no-unused-vars": "off",
-       "no-console": "warn",
-       "@typescript-eslint/explicit-module-boundary-types": "off",
-       "react/display-name": "off",
-       "react/jsx-curly-brace-presence": [
-         "warn",
-         { "props": "never", "children": "never" }
-       ],
-   
-       //#region  //*=========== Unused Import ===========
-       "@typescript-eslint/no-unused-vars": "off",
-       "unused-imports/no-unused-imports": "warn",
-       "unused-imports/no-unused-vars": [
-         "warn",
-         {
-           "vars": "all",
-           "varsIgnorePattern": "^_",
-           "args": "after-used",
-           "argsIgnorePattern": "^_"
-         }
-       ],
-       //#endregion  //*======== Unused Import ===========
-   
-       //#region  //*=========== Import Sort ===========
-       "simple-import-sort/exports": "warn",
-       "simple-import-sort/imports": [
-         "warn",
-         {
-           "groups": [
-             // ext library & side effect imports
-             ["^@?\\w", "^\\u0000"],
-             // Lib and hooks
-             ["^@/lib", "^@/hooks", "^@/utils"],
-             // static data
-             ["^@/data"],
-             // components
-             ["^@/components", "^@/container"],
-             // zustand store
-             ["^@/store"],
-             // Other imports
-             ["^@/"],
-             // relative paths up until 3 level
-             ["^.+\\.s?css$"],
-             // {s}css files
-             [
-               "^\\./?$",
-               "^\\.(?!/?$)",
-               "^\\.\\./?$",
-               "^\\.\\.(?!/?$)",
-               "^\\.\\./\\.\\./?$",
-               "^\\.\\./\\.\\.(?!/?$)",
-               "^\\.\\./\\.\\./\\.\\./?$",
-               "^\\.\\./\\.\\./\\.\\.(?!/?$)"
-             ],
-             ["^@/types"],
-             // other that didnt fit in
-             ["^"]
-           ]
-         }
-       ]
-       //#endregion  //*======== Import Sort ===========
-     },
-     "globals": {
-       "React": true,
-       "JSX": true
-     }
-   }
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "jest-dom",
+    "testing-library",
+    "@typescript-eslint",
+    "simple-import-sort",
+    "unused-imports",
+    "prettier",
+    "jsx-a11y",
+    "jest"
+  ],
+  "extends": [
+    "prettier",
+    "next",
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "ignorePatterns": [
+    "public/*"
+  ],
+  "rules": {
+    "prettier/prettier": "error",
+    "no-unused-vars": "off",
+    "no-console": "warn",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "react/display-name": "off",
+    "react/jsx-curly-brace-presence": [
+      "warn",
+      {
+        "props": "never",
+        "children": "never"
+      }
+    ],
+    //#region  //*=========== Unused Import ===========
+    "@typescript-eslint/no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "warn",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    //#endregion  //*======== Unused Import ===========
+    //#region  //*=========== Import Sort ===========
+    "simple-import-sort/exports": "warn",
+    "simple-import-sort/imports": [
+      "warn",
+      {
+        "groups": [
+          // ext library & side effect imports
+          [
+            "^@?\\w",
+            "^\\u0000"
+          ],
+          // Lib and hooks
+          [
+            "^@/lib",
+            "^@/hooks",
+            "^@/utils"
+          ],
+          // static data
+          [
+            "^@/data"
+          ],
+          // components
+          [
+            "^@/components",
+            "^@/container"
+          ],
+          // zustand store
+          [
+            "^@/store"
+          ],
+          // Other imports
+          [
+            "^@/"
+          ],
+          // relative paths up until 3 level
+          [
+            "^.+\\.s?css$"
+          ],
+          // {s}css files
+          [
+            "^\\./?$",
+            "^\\.(?!/?$)",
+            "^\\.\\./?$",
+            "^\\.\\.(?!/?$)",
+            "^\\.\\./\\.\\./?$",
+            "^\\.\\./\\.\\.(?!/?$)",
+            "^\\.\\./\\.\\./\\.\\./?$",
+            "^\\.\\./\\.\\./\\.\\.(?!/?$)"
+          ],
+          [
+            "^@/types"
+          ],
+          // other that didnt fit in
+          [
+            "^"
+          ]
+        ]
+      }
+    ]
+    //#endregion  //*======== Import Sort ===========
+  },
+  "globals": {
+    "React": true,
+    "JSX": true
+  }
+}
