--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jotai": "^2.0.2",
     "next": "^13.2.1",
     "next-auth": "^4.19.2",
+    "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
