--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,13 +19,19 @@ jobs:
         with:
           persist-credentials: false      
 
+      - name: Init pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: ⎔ Set up node
         uses: actions/setup-node@v3
         with:
           node-version: lts/*
+          cache: 'pnpm'
 
       - name: 📥 Download deps
-        run: yarn install
+        run: pnpm install
         
       - name: 🔎 Type check
-        run: yarn tsc
+        run: pnpm tsc
