--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "start": "next start",
     "prepare": "pnpm husky install",
     "typecheck": "tsc --noEmit",
-    "test": "jest",
     "format:check": "prettier -c .",
     "vercel-build": "next build",
     "postinstall": "husky install",
     "generate-types": "openapi-typescript http://localhost:3001/documentation/json --output types.ts",
     "lint": "eslint --fix --max-warnings=0 \"src/**/*.{js,ts,jsx,tsx}\"",
     "format": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx}\"",
-    "lint-format": "pnpm format && pnpm lint"
+    "lint-format": "pnpm format && pnpm lint",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -54,23 +55,21 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@tanstack/react-query-devtools": "^5.0.0-rc.4",
-    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.5",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^20.7.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
+    "@vitejs/plugin-react": "^4.1.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "bufferutil": "^4.0.7",
     "cypress": "^13.2.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.3",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest": "^27.4.0",
-    "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
@@ -78,14 +77,14 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^14.0.1",
     "msw": "^1.3.1",
     "next-router-mock": "^0.9.10",
     "openapi-typescript": "^6.7.0",
     "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1",
-    "utf-8-validate": "^6.0.3"
+    "utf-8-validate": "^6.0.3",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^0.34.6"
   }
 }
