--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@faker-js/faker": "^8.2.0",
     "@tanstack/react-query-devtools": "^5.0.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -81,7 +82,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^14.0.1",
-    "msw": "^1.3.1",
+    "msw": "^1.3.2",
+    "msw-auto-mock": "^0.15.0",
     "next-router-mock": "^0.9.10",
     "openapi-typescript": "^6.7.0",
     "prettier": "^3.0.3",
