--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "vercel-build": "next build",
     "postinstall": "husky install",
     "generate-types": "openapi-typescript http://localhost:3001/documentation/json --output types.ts",
-    "lint": "eslint --fix \"**/*.{js,ts,jsx,tsx}\"",
+    "lint": "eslint --fix --max-warnings=0 \"**/*.{js,ts,jsx,tsx}\"",
     "format": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx}\"",
     "lint-format": "pnpm format && pnpm lint",
     "test": "vitest",
@@ -28,45 +28,45 @@
     "@hookform/resolvers": "^3.3.1",
     "@next/bundle-analyzer": "^14.2.3",
     "@phosphor-icons/react": "^2.0.13",
-    "@qdrant/openapi-typescript-fetch": "^1.2.1",
+    "@qdrant/openapi-typescript-fetch": "^1.2.6",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.0.0",
-    "clsx": "^2.0.0",
-    "framer-motion": "^10.16.4",
-    "imagekit": "^4.1.3",
+    "@tanstack/react-query": "^5.36.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.2",
+    "imagekit": "^5.0.1",
     "jotai": "^2.8.0",
     "lodash.debounce": "^4.0.8",
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-easy-crop": "^5.0.2",
-    "react-focus-lock": "^2.9.5",
-    "react-hook-form": "^7.46.2",
-    "react-intersection-observer": "^9.5.2",
-    "react-remove-scroll": "^2.5.7",
-    "react-responsive": "^9.0.2",
-    "sass": "^1.68.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-easy-crop": "^5.0.7",
+    "react-focus-lock": "^2.12.1",
+    "react-hook-form": "^7.51.4",
+    "react-intersection-observer": "^9.10.2",
+    "react-remove-scroll": "^2.5.10",
+    "react-responsive": "^10.0.0",
+    "sass": "^1.77.1",
     "sharp": "^0.33.3",
-    "socket.io-client": "^4.7.2",
-    "sonner": "^1.0.3",
-    "typescript": "5.2.2",
-    "zod": "^3.22.2"
+    "socket.io-client": "^4.7.5",
+    "sonner": "^1.4.41",
+    "typescript": "5.4.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@faker-js/faker": "^8.2.0",
-    "@tanstack/react-query-devtools": "^5.0.3",
+    "@tanstack/react-query-devtools": "^5.36.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "@types/lodash.debounce": "^4.0.7",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.7.0",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-react": "^4.1.0",
     "@vitest/coverage-v8": "^0.34.6",
     "bufferutil": "^4.0.7",
@@ -76,13 +76,14 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-53bb89e-20240515",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-testing-library": "^6.0.2",
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^22.1.0",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "^15.2.2",
     "msw": "^1.3.2",
     "msw-auto-mock": "^0.15.0",
     "next-router-mock": "^0.9.13",
