--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,21 +15,22 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
-    "@next/bundle-analyzer": "^14.2.3",
+    "@next/bundle-analyzer": "15.0.0-rc.0",
     "@phosphor-icons/react": "^2.0.13",
     "@qdrant/openapi-typescript-fetch": "^1.2.6",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.36.1",
+    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.2",
     "imagekit": "^5.0.1",
     "jotai": "^2.8.0",
     "lodash.debounce": "^4.0.8",
-    "next": "^14.2.3",
+    "nanoid": "^5.0.7",
+    "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-easy-crop": "^5.0.7",
     "react-focus-lock": "^2.12.1",
     "react-hook-form": "^7.51.4",
