fix: css buttons

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,8 +18,8 @@
     "@hookform/resolvers": "^3.3.1",
     "@phosphor-icons/react": "^2.0.13",
     "@qdrant/openapi-typescript-fetch": "^1.2.6",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.0-rc.4",
+    "@radix-ui/react-tooltip": "^1.1.0-rc.4",
     "@tanstack/react-query": "^5.36.1",
     "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
     "clsx": "^2.1.1",
@@ -27,23 +27,23 @@
     "jotai": "^2.8.0",
     "lodash.debounce": "^4.0.8",
     "nanoid": "^5.0.7",
-    "next": "15.0.0-canary.12",
+    "next": "15.0.0-canary.25",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-6d3110b4d9-20240531",
-    "react-dom": "19.0.0-rc-6d3110b4d9-20240531",
+    "react": "19.0.0-rc.0",
+    "react-dom": "19.0.0-rc.0",
     "react-easy-crop": "^5.0.7",
     "react-focus-lock": "^2.12.1",
-    "react-hook-form": "^7.51.4",
+    "react-hook-form": "^7.51.5",
     "react-intersection-observer": "^9.10.2",
     "react-remove-scroll": "^2.5.10",
     "react-responsive": "^10.0.0",
     "sass": "^1.77.1",
     "socket.io-client": "^4.7.5",
-    "sonner": "^1.4.41",
+    "sonner": "^1.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "15.0.0-canary.12",
+    "@next/bundle-analyzer": "15.0.0-canary.25",
     "@tanstack/react-query-devtools": "^5.36.1",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.7.0",
@@ -51,6 +51,6 @@
     "@types/react-dom": "^18.3.0",
     "openapi-typescript": "^6.7.0",
     "prettier": "^3.2.5",
-    "typescript": "5.4.5"
+    "typescript": "5.5.0-beta"
   }
 }
