--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -52,6 +52,6 @@
     "nodemon": "^3.1.0",
     "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "5.5.0-beta"
   }
 }
