--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,17 +1,24 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "lib": ["es2022"],
-    "module": "es2022",
-    "target": "es2022",
-    "moduleResolution": "Node",
-    "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
+    "target": "es2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+
     "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+
+    "module": "NodeNext",
     "outDir": "dist",
-    "noImplicitAny": true,
-    "allowSyntheticDefaultImports": true
+    "sourceMap": true,
+
+    "lib": ["es2022"]
   },
   "ts-node": {
     "swc": true
