--- a/package.json
+++ b/package.json
@@ -16,23 +16,22 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@eslint/compat": "^1.0.1",
+    "@eslint/compat": "^1.0.3",
     "@eslint/eslintrc": "^3.1.0",
-    "@next/eslint-plugin-next": "15.0.0-canary.12",
+    "@next/eslint-plugin-next": "15.0.0-canary.25",
     "eslint": "^9.4.0",
-    "eslint-config-next": "15.0.0-canary.12",
+    "eslint-config-next": "15.0.0-canary.25",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-compiler": "0.0.0-experimental-c8b3f72-20240517",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-testing-library": "^6.2.2",
     "eslint-plugin-unused-imports": "^4.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "turbo": "^2.0.1",
-    "typescript-eslint": "8.0.0-alpha.13"
+    "typescript-eslint": "^7.13.0"
   }
 }
