fix: cookie domain

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -4,6 +4,7 @@ IMG_KIT_PRIVATE=
 IMG_KIT_PUBLIC=
 IMG_KIT_ENDPOINT=
 APP_URL=
+COOKIE_DOMAIN=
 BACKEND_URL=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
