--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "pnpm prettier --write \"**/*.{ts,tsx}\"",
     "check-types": "pnpm run check-types --parallel",
     "prepare": "pnpm husky",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "restart-backend": "pm2 restart ~/ecosystem.config.js --only \"PhotoApp_Backend\"",
+    "restart-frontend": "pm2 restart ~/ecosystem.config.js --only \"PhotoApp_Frontend\""
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
