fix: turbo again

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"build": "pnpm prisma generate && pnpm tsc",
 		"build:dev": "pnpm prisma generate && pnpm tsc",
+		"postbuild": "pm2 restart ~/ecosystem.config.js --only \"PhotoApp_Backend\"",
 		"start": "node --env-file=.env ./dist/src",
 		"check-types": "tsc --noEmit",
 		"test": "vitest",
