--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -28,7 +28,7 @@
 		"jotai": "^2.8.0",
 		"lodash.debounce": "^4.0.8",
 		"nanoid": "^5.0.7",
-		"next": "15.0.0-canary.95",
+		"next": "15.0.0-canary.100",
 		"next-themes": "^0.3.0",
 		"react": "19.0.0-rc.0",
 		"react-dom": "19.0.0-rc.0",
@@ -45,6 +45,7 @@
 	"devDependencies": {
 		"@csstools/postcss-global-data": "^2.1.1",
 		"@next/bundle-analyzer": "15.0.0-rc.0",
+		"@playwright/test": "^1.45.3",
 		"@tanstack/react-query-devtools": "^5.44.0",
 		"@types/lodash.debounce": "^4.0.9",
 		"@types/node": "^20.7.0",
