feat: use cloudinary instead of imagekit

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,8 +1,9 @@
 DATABASE_URL=
 SECRET=
-IMG_KIT_PRIVATE=
-IMG_KIT_PUBLIC=
-IMG_KIT_ENDPOINT=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_URL=
 APP_URL=
 COOKIE_DOMAIN=
 BACKEND_URL=
