--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -42,7 +42,7 @@
 		"@vitest/coverage-v8": "^1.6.0",
 		"nodemon": "^3.1.3",
 		"tsx": "^4.15.5",
-		"typescript": "5.6.0-beta",
+		"typescript": "^5.6.2",
 		"vite-tsconfig-paths": "^4.3.2",
 		"vitest": "1.6.0",
 		"vitest-mock-extended": "^1.3.1"
