--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,7 +17,6 @@
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
 		"@phosphor-icons/react": "^2.1.7",
-		"openapi-typescript-fetch": "^2.1.0",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tanstack/react-query": "^5.71.1",
@@ -26,8 +25,9 @@
 		"jotai": "^2.12.2",
 		"lodash.debounce": "^4.0.8",
 		"nanoid": "^5.1.5",
-		"next": "15.3.0-canary.26",
+		"next": "15.3.0-canary.43",
 		"next-themes": "^0.4.6",
+		"openapi-typescript-fetch": "^2.1.0",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"react-easy-crop": "^5.4.1",
@@ -38,6 +38,7 @@
 		"react-responsive": "^10.0.1",
 		"socket.io-client": "^4.8.1",
 		"sonner": "^2.0.2",
+		"utf-8-validate": "^6.0.5",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
@@ -50,6 +51,7 @@
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"autoprefixer": "^10.4.21",
+		"next-rspack": "canary",
 		"openapi-typescript": "^7.6.1",
 		"postcss": "^8.5.3",
 		"postcss-custom-media": "^11.0.5",
